[package]
name = "squad-broadcasts"
version = "0.1.0"
authors = ["Bruno Bigras <bigras.bruno@gmail.com>"]

[dependencies]
clap = "2.26"
byteorder = "1.1"
chrono = "0.4"
error-chain = "0.10"
env_logger = "0.4"
log = "0.3"
nom = "3.2"
stream-line-reader = { git = "https://github.com/bbigras/stream-line-reader.git" }
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"